# brain

./: AGENTS.md  Cargo.toml  PROJECT_CONTEXT.md  brain_glm5.md  config.toml
.beads/: issues.jsonl  metadata.json
data/data/lancedb/documents/documents.lance/_transactions/: 0-ca9ebd94-a968-4cf1-8ec4-b38bafac26a9.txn  1-e5084b0e-b3b7-4e72-ba12-698a36693f7a.txn  10-e6f954a6-1e3b-4a13-a4df-17bd7fa2d0b7.txn  100-6095501b-cc12-4ee0-bae3-9df9a13cf297.txn  101-bf5551d0-11de-4ee7-92c9-9c820a4d9b45.txn  102-5e24047e-7a29-4a6c-ac1e-01f7aad09a08.txn  103-ac39b099-48af-4102-b8e4-5dd2d8306f37.txn  104-a55e9a79-4251-4546-9eef-49b7f7d31788.txn  105-5a9095af-c1e7-4ecc-a930-e1935598907c.txn  106-4731d2eb-b26a-4ae8-9937-944587c1c2b7.txn  107-714cf1b8-b939-4ed1-8c68-c9f00297afff.txn  108-bc18a171-9b40-4b76-a655-d7aae92d4494.txn  109-d77e4a06-cbcf-4100-a6ab-ca0ccf87b6d7.txn  11-9f62b49e-589a-4e28-8428-8622e32b09d1.txn  110-bbf345b2-0ec3-48ee-bb7a-d61038cd08d4.txn  111-0c3f10a2-0917-4e00-9a22-8a4788c4843a.txn  112-4d4f3f85-ffc7-4448-a132-5c0f61aba62a.txn  113-2d71bead-2f60-4f3a-bedb-e0e598e11f0c.txn  114-2ccbea62-243c-499f-8358-f744163c1526.txn  115-81e745db-34e1-4197-91ed-6f59ec8ae72f.txn  116-c6a36c8a-fd4a-42fc-a885-532653e559ca.txn  117-0551b24b-9ca4-4fbe-87b8-bac220b8eba4.txn  118-b9d094d0-8f0b-49e1-b1d8-f68bbcb844f8.txn  (+550 more)
src/: config.rs  lib.rs  main.rs
src/cli/: mod.rs
src/embedding/: mod.rs
src/loaders/: chunker.rs  github.rs  local.rs  mod.rs
src/rag/: client.rs  mod.rs  pipeline.rs
src/scheduler/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
