[package]
name = "brain"
version = "0.1.0"
edition = "2024"
description = "Local RAG brain with Candle embeddings, LanceDB, and mistral.rs"
authors = ["alex"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

rig-core = "0.7"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

tokenizers = "0.21"
regex = "1"

git2 = "0.19"

toml = "0.9"
directories = "6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
ignore = "0.4"
async-trait = "0.1"
futures = "0.3"

candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9", features = ["cuda"] }
candle-transformers = { version = "0.9", features = ["cuda"] }
hf-hub = { version = "0.4", features = ["tokio"] }

[[bin]]
name = "brain"
path = "src/main.rs"
